# Julia-s-Fractal-Viewer

./: .clang-format  CMakeLists.txt  Julia.asm  Julia.h  README.md  main.c
.github/workflows/: ci.yml
include/: Parameters.hpp  Renderer.hpp  Window.hpp
src/: Renderer.cpp  Window.cpp  main.cpp
tests/: test_main.cpp
